added figure for defining 1-handle in terms of other, in relation to cusp flip thing

--- a/n-eps-TQFT-nplus1/n-eps-TQFT-nplus1.tex
+++ b/n-eps-TQFT-nplus1/n-eps-TQFT-nplus1.tex
@@ -460,13 +460,19 @@ and those involving the non-invertible 2-morphisms
 It seemed to me at first that the cusp flip relation could be
 ignored if we define one type of 2d 1-handle
 in terms of the other.
-TODO picture.
+See \figref{f:defn-1-hdl-alt}.
 
 However, it turns out this is not enough,
 essentially because of symmetry.
-In TODO figure, we see that we could have defined
+In \figref{f:defn-1-hdl-alt}, we see that we could have defined
 the 1-handle using the last diagram instead of the second diagram;
 but these are not equal unless we introduce the cusp flip relations.
+
+\begin{figure}[ht]
+\includegraphics[width=12cm]{fig-defn-1-hdl-alt.jpg}
+\caption{Defining 1-handle in terms of the other 1-handle}
+\label{f:defn-1-hdl-alt}
+\end{figure}
 
 An alternative is to define 1-handle in a way that,
 I think, is more natural from a 2-dim perspective.
