identity morphism is indeed in Z

--- a/n-eps-TQFT-nplus1/n-eps-TQFT-nplus1.tex
+++ b/n-eps-TQFT-nplus1/n-eps-TQFT-nplus1.tex
@@ -1091,14 +1091,16 @@ has underlying graph in $N \times I \cup N \times I$
 given by the images of $\Gamma$ and $\Gamma'$
 and forgetting their boundary vertices
 at the points where they meet.
+
+The identity morphism on an object $\VV \in Z(N)$
+is given by the graph with no internal vertices,
+with the only possible labeling of edges.
 \end{definition}
 
 It is straightforward to check that
-$Z(pt^+) \simeq \cA$
-and $Z(pt^-) \simeq \cA^\op$
+$Z(pt^+) \simeq \cA$ and $Z(pt^-) \simeq \cA^\op$
 (in fact these are isomorphisms).
 For the empty 0-manifold, $Z(\empt{0}) = *//\kk$.
-
 
 It is useful to think of $N \times I$ for $N = pt^+$
 as an interval going from right to left,
