commit before merge main work from office

--- a/n-eps-TQFT-nplus1/n-eps-TQFT-nplus1.tex
+++ b/n-eps-TQFT-nplus1/n-eps-TQFT-nplus1.tex
@@ -1098,7 +1098,7 @@ $Z(pt^+) \simeq \cA$
 and $Z(pt^-) \simeq \cA^\op$
 (in fact these are isomorphisms).
 
-TODO clarify geometry $Z(---<---) \hatbox Z(---<---)
+TODO clarify geometry $Z(\overset{+}{\bullet} --<-- \bullet) \hatbox Z(---<---)
 \to Z(---<---)$.
 
 We see that for the empty 0-manifold, $Z(\empt{0}) = *//\kk$.
